# TAURI-VPN-PLUGIN

./: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json  tsconfig.json
.tauri/tauri-api/Sources/Tauri/: Tauri.swift
android/: build.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/java/com/kostra/vpn/plugin/: KostraVpnService.kt  VpnPlugin.kt
guest-js/: index.ts
ios/: Package.swift
ios-tunnel/: Package.swift
ios-tunnel/.swiftpm/xcode/xcuserdata/andrei.xcuserdatad/xcschemes/: xcschememanagement.plist
ios-tunnel/Sources/KostraVpnTunnel/: PacketTunnelProvider.swift
ios/.swiftpm/xcode/xcuserdata/andrei.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/Sources/VpnPlugin/: PacketTunnelProvider.swift  VpnPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: import_server.toml  list_protocols.toml  validate_profile.toml
permissions/schemas/: schema.json
src/: commands.rs  config.rs  engine.rs  errors.rs  import.rs  lib.rs  macos_vpn.rs  models.rs  platform.rs  protocols.rs  state.rs
src/olcrtc/: client.rs  crypto.rs  mod.rs  mux.rs  wbstream.rs
tests/: import_and_config.rs
